--- a/configs/db.ini
+++ b/configs/db.ini
@@ -1,4 +1,4 @@
-DB_HOST = localhost
-DB_USER = root
-DB_PASS = root
+DB_HOST = homestead.app
+DB_USER = homestead
+DB_PASS = secret
 DB_NAME = mediatheque
